<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">PACE Connected Fueling</string>
    <string name="loading_data">Loading data …</string>
    <string name="location_permission_dialog_title">Device location</string>
    <string name="location_permission_dialog_message">To use the payment function, your precise location is needed. Please adjust your settings.</string>
    <string name="settings">Settings</string>
    <string name="biometric_dialog_title">Biometric authentication</string>
    <string name="biometric_dialog_message">Biometric authentication is the fastest and securest way to authorize your payments.\n\nDo you want to use biometric authentication to authorize payments?</string>
    <string name="biometric_setup_error">Failed to activate biometric authentication</string>
    <string name="common_yes">Yes</string>
    <string name="common_no">No</string>
    <string name="common_continue">Continue</string>
    <string name="common_done">Done</string>
    <string name="select_gas_station">Select a gas station to start fueling:</string>
    <string name="select_payment_method">Select your payment method:</string>
    <string name="select_pump">Select your pump:</string>
    <string name="distance">%d m from you</string>
    <string name="no_gas_stations">Currently, there are no gas stations that support Connected Fueling around you.</string>
    <string name="no_payment_method">No payment method available. Create a new one here.</string>
    <string name="add_payment_method">Add payment method</string>
    <string name="not_accepted">Not accepted</string>
    <string name="payment_method_kind_credit_card">Credit card</string>
    <string name="payment_method_kind_dkv">DKV Card</string>
    <string name="payment_method_kind_hoyer">HoyerCard</string>
    <string name="payment_method_kind_fuel_card">Fuel card</string>
    <string name="payment_method_kind_giropay">giropay/paydirekt</string>
    <string name="payment_method_kind_paypal">PayPal</string>
    <string name="payment_method_kind_sepa">SEPA direct debit</string>
    <string name="payment_method_kind_zgm">ZGM Card</string>
    <string name="generic_error">Oops, something went wrong. Please try again later.</string>
    <string name="pre_auth_amount_pump_number">Pump No. %s</string>
    <string name="pre_auth_amount_headline">Authorize your amount</string>
    <string name="pre_auth_amount_description">Select one of the predefined amounts or enter your maximum amount in the input field. You will only be charged the amount you refuel.</string>
    <string name="pre_auth_amount_25">€ 25</string>
    <string name="pre_auth_amount_50">€ 50</string>
    <string name="pre_auth_amount_100">€ 100</string>
    <string name="pre_auth_amount_150">€ 150</string>
    <string name="pre_auth_amount_hint">Custom amount</string>
    <string name="pump_status_free_title">The pump is ready</string>
    <string name="pump_status_free_description">You can refuel now</string>
    <string name="pump_status_free_pre_auth_description">You can refuel up to €%d</string>
    <string name="pump_status_in_use_title">Fueling in progress …</string>
    <string name="pump_status_in_use_description">When you have finished filling up, put the fuel nozzle back to proceed</string>
    <string name="pump_status_in_transaction_title">Please wait a moment</string>
    <string name="pump_status_in_transaction_description">This pump is currently in use</string>
    <string name="pump_status_out_of_order_title">Out of order</string>
    <string name="pump_status_out_of_order_description">This pump is currently out of order</string>
    <string name="cancel_pre_auth">Cancel authorization</string>
    <string name="pre_auth_dialog_message">Would you like to cancel the fueling process?</string>
    <string name="pre_auth_canceled_successful_title">Fueling canceled</string>
    <string name="pre_auth_canceled_successful_description">No payment was made. Please try again or pay at checkout.</string>
    <string name="pre_auth_canceled_failed_title">Cancellation failed</string>
    <string name="pre_auth_canceled_failed_description">If refuelling has already started, it cannot be cancelled. If you have not yet refuelled, try unhooking and rehooking the nozzle without refuelling.</string>
    <string name="pre_auth_canceled_button">Restart fueling process</string>
    <string name="pay_amount">Amount</string>
    <string name="pay_fuel_amount">%s ltr.</string>
    <string name="pay_price_per_unit">Price p. ltr.</string>
    <string name="pay_price_per_unit_value">%s p. ltr.</string>
    <string name="pay_payment_method">Payment method</string>
    <string name="pay_location">Location</string>
    <string name="pay_recipient">Recipient</string>
    <string name="pay_button">Pay safely now</string>
    <string name="pay_enter_pin">Enter your four-digit PACE PIN to confirm the payment safely.</string>
    <string name="pay_enter_password">Enter your password to confirm the payment safely.</string>
    <string name="pay_enter_mail_otp">Enter the six-digit code we just sent to your email address.</string>
    <string name="pay_invalid_input">Your input is not correct. Please verify and try again.</string>
    <string name="pay_rejected">Your payment method does not allow you to fill up with the selected fuel type. Please try again with a different payment method.</string>
    <string name="summary_success_title">Your payment was successful</string>
    <string name="summary_success_description">You can now continue driving</string>
    <string name="summary_success_note">Your receipt will also be sent to you via email within the next minutes.</string>
    <string name="summary_show_receipt">Show receipt now</string>
    <string name="summary_show_receipt_failed">Could not open receipt</string>
    <string name="summary_failure_title">An error has occurred</string>
    <string name="summary_failure_description">Please pay at checkout after fueling</string>
</resources>
