<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.amount.AmountFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        tools:title="Gas station name" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/pump_number_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:contentPaddingBottom="10dp"
                app:contentPaddingLeft="20dp"
                app:contentPaddingRight="20dp"
                app:contentPaddingTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/image">

                <TextView
                    android:id="@+id/pump_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
                    tools:text="Pump No. 2" />

            </com.google.android.material.card.MaterialCardView>

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_pre_auth_amount"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="40dp"
                android:text="@string/pre_auth_amount_headline"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
                app:layout_constraintTop_toBottomOf="@id/image" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/pre_auth_amount_description"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                app:layout_constraintTop_toBottomOf="@id/headline" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_25"
                    style="@style/Widget.Material3.Chip.Suggestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pre_auth_amount_25"
                    app:chipEndPadding="10dp"
                    app:chipStartPadding="10dp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_50"
                    style="@style/Widget.Material3.Chip.Suggestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pre_auth_amount_50"
                    app:chipEndPadding="10dp"
                    app:chipStartPadding="10dp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_100"
                    style="@style/Widget.Material3.Chip.Suggestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pre_auth_amount_100"
                    app:chipEndPadding="10dp"
                    app:chipStartPadding="10dp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_150"
                    style="@style/Widget.Material3.Chip.Suggestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/pre_auth_amount_150"
                    app:chipEndPadding="10dp"
                    app:chipStartPadding="10dp" />

            </com.google.android.material.chip.ChipGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/amount_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/pre_auth_amount_hint"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toStartOf="@id/currency"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chip_group">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/currency"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Material3.DisplaySmall"
                app:layout_constraintBottom_toBottomOf="@id/amount_input_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/amount_input_layout"
                tools:text="€" />

            <Button
                android:id="@+id/continue_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="40dp"
                android:text="@string/common_continue"
                app:layout_constraintTop_toBottomOf="@id/amount_input_layout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
