<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.amount.AmountFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        tools:title="Gas station name" />

    <ScrollView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/pump_number_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:contentPaddingBottom="10dp"
                app:contentPaddingLeft="20dp"
                app:contentPaddingRight="20dp"
                app:contentPaddingTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/pump_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
                    tools:text="Pump No. 2" />

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/amount_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/pay_amount"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
                app:layout_constraintTop_toBottomOf="@id/pump_number_card" />

            <TextView
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Material3.DisplayMedium"
                app:layout_constraintTop_toBottomOf="@id/amount_label"
                tools:text="€50.00" />

            <TextView
                android:id="@+id/product_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:ellipsize="end"
                android:lines="1"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
                app:layout_constraintEnd_toStartOf="@id/price_per_unit_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/amount"
                app:layout_constraintWidth_percent="0.5"
                tools:text="Diesel" />

            <TextView
                android:id="@+id/fuel_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="1"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                app:layout_constraintEnd_toEndOf="@id/product_name"
                app:layout_constraintStart_toStartOf="@id/product_name"
                app:layout_constraintTop_toBottomOf="@id/product_name"
                tools:text="37.4 ltr." />

            <TextView
                android:id="@+id/price_per_unit_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/pay_price_per_unit"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/product_name"
                app:layout_constraintTop_toTopOf="@id/product_name"
                app:layout_constraintWidth_percent="0.5" />

            <TextView
                android:id="@+id/price_per_unit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="1"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                app:layout_constraintEnd_toEndOf="@id/price_per_unit_label"
                app:layout_constraintStart_toStartOf="@id/price_per_unit_label"
                app:layout_constraintTop_toBottomOf="@id/price_per_unit_label"
                tools:text="1.337 €/ltr." />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/post_pay_only_values"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="product_name, fuel_amount, price_per_unit_label, price_per_unit" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/content_card"
                style="?attr/materialCardViewFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:contentPadding="15dp"
                app:layout_constraintTop_toBottomOf="@id/fuel_amount">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/payment_method_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pay_payment_method"
                        android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/payment_method"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                        app:layout_constraintTop_toBottomOf="@id/payment_method_label"
                        tools:text="PayPal\nhorst@pace.car" />

                    <TextView
                        android:id="@+id/location_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/pay_location"
                        android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
                        app:layout_constraintTop_toBottomOf="@id/payment_method" />

                    <TextView
                        android:id="@+id/location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                        app:layout_constraintTop_toBottomOf="@id/location_label"
                        tools:text="Gas station name\nExample street 1, 12345 Example city" />

                    <TextView
                        android:id="@+id/recipient_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/pay_recipient"
                        android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
                        app:layout_constraintTop_toBottomOf="@id/location" />

                    <TextView
                        android:id="@+id/recipient"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                        app:layout_constraintTop_toBottomOf="@id/recipient_label"
                        tools:text="PACE Telematics GmbH" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <Button
                android:id="@+id/pay_button"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/pay_button"
                app:icon="@drawable/ic_lock"
                app:iconGravity="textStart"
                app:layout_constraintTop_toBottomOf="@id/content_card" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <include
        android:id="@+id/loading_view"
        layout="@layout/loading_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/error_view"
        layout="@layout/error_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
